--- a/pulltorefreshlibrary/src/main/res/layout/activity_main_test.xml
+++ b/pulltorefreshlibrary/src/main/res/layout/activity_main_test.xml
@@ -10,6 +10,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/listview_items"
             ></ListView>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"/>
     </domain.mycompany.pulltorefreshlibrary.RefreshableView>
 
 </LinearLayout>
